# rag-legal-boe

./: .env.example  .gitattributes  .gitignore  CIERRE_MVP.md  LICENSE  README.md  RESULTADOS.md  _verify_kappa.py  ejemplo_ejecucion.txt  presentacion_tutor_TFG.html  presentacion_tutor_TFG_2026-06-26.html  pyproject.toml
docs/: analisis_errores_generacion.md  decisiones_de_diseno.md  decisiones_tecnicas.md  evaluacion.md  evaluacion_gold_y_metricas.md  fase2_dense_baseline.md  fuentes_y_licencias.md  known_issues.md  run_dense_embeddings_server.md
notebooks/: 01_exploracion_api_boe.ipynb  02_perfilado_tokenizacion.ipynb  03_benchmark_modelos_densos.ipynb  04_ablaciones_chunking_y_contexto.ipynb  05_seleccion_baseline_dense.ipynb  06_evaluacion_generacion.ipynb  06_resultados.html  README.md
prompts/: judge_correctness.txt  judge_faithfulness.txt  rag_prompt.txt  system_prompt.txt
schemas/: boe_legal_chunks_v2.schema.json  boe_legal_document_v2.schema.json  boe_legal_history_v2.schema.json  boe_legal_parents_v2.schema.json  dense_embedding_bundle_v1.schema.json  dense_embedding_row_v1.schema.json  dense_embedding_validation_report_v1.schema.json  rag_answer_v1.schema.json  rag_llm_answer_v1.schema.json
scripts/: README.md  ablate_bm25.py  ablate_context.py  ablate_fusion.py  abstention_nearmiss.py  annotation_worksheet.py  answer_question.py  audit_corpus.py  audit_eval_dataset.py  benchmark_dense_models.py  benchmark_retrieval_strategies.py  build_corpus.py  build_corpus92_dataset.py  build_eval_candidates.py  chunk_boe_document.py  combine_retrieval_robustness.py  (+19 more)
(+421 files in other folders)
