[project]
name = "rag-legal-boe"
version = "0.1.0"
description = "Sistema RAG informativo sobre legislación consolidada del BOE (TFG)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "lxml>=6.1.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "transformers>=5.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "ipykernel>=6.31.1",
    "mypy>=2.1.0",
    "nbconvert>=7.16.6",
    "pandas>=2.3.3",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.15",
]
